add complete project of bags

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <input class="kn" placeholder="Search">
         </ul>
     </div>
-       <h3 class="diva">2024 Newest Order In </h3> 
+    <h3 class="diva">2024 Newest Order In </h3>
     <div class="pic"></div>
     <div class="total">
         <div>
@@ -67,7 +67,7 @@
         <div>
             <img class="malite" src="img/new.webp" alt="">
             <h3 class="text">Camilla Card Holder</h3>
-            <span class="gloss" >$1,299</span>
+            <span class="gloss">$1,299</span>
         </div>
         <div>
             <img class="malite" src="img/eight.webp" alt="">
@@ -89,35 +89,37 @@
             <h3 class="text">Harper Handbag</h3>
             <span class="gloss">$4,449</span>
         </div>
-        
+
     </div>
 
-    <h3 class="our"> #MALITE</h3>
+    <div class="hd">
+        <h3 class="our"> #MALITE</h3>
         <p>Join our community</p>
+    </div>
     <div class="star">
-        <div>
-            <img class="star" src="img/slide 1.webp" alt="">
+        <div class="flex2">
+            <img class="moon" src="img/slide 1.webp" alt="">
             <h3 class="text-2">Upalina Gupta</h3>
             <span class="gloss">Fashion Stylist</span>
-            <h3></h3>
+
         </div>
-        <div>
-            <img class="star" src="img/slide 2.webp" alt="">
+        <div class="flex2">
+            <img class="moon" src="img/slide 2.webp" alt="">
             <h3 class="text-2">Shanaya Joshy</h3>
             <span class="gloss">Digital Creator</span>
         </div>
-        <div>
-            <img class="star" src="img/slide 5.webp" alt="">
+        <div class="flex2">
+            <img class="moon" src="img/slide 5.webp" alt="">
             <h3 class="text-2">Athiya Shetty</h3>
             <span class="gloss">Celebrity</span>
         </div>
-        <div>
-            <img class="star" src="img/slide 4.webp" alt="">
+        <div class="flex2">
+            <img class="moon" src="img/slide 4.webp" alt="">
             <h3 class="text-2">Janaat Khurana</h3>
             <span class="gloss">Fashion Influencer</span>
         </div>
-        <div>
-            <img  class="star" src="img/slide 6.webp" alt="">
+        <div class="flex2">
+            <img class="moon" src="img/slide 6.webp" alt="">
             <h3 class="text-2">Komal Pandey</h3>
             <span class="gloss">Model</span>
         </div>
@@ -154,24 +156,26 @@
             </ul>
             <h4 class="last"> © 2024 MALITE
 
-                <p>Developed by D2Cbox</p></h4>
+                <p>Developed by D2Cbox</p>
+            </h4>
         </div>
 
         <div class="footer-column">
             <h3>CONTACT US </h3>
             <div class="contact-info">
-        <p><strong>Head Office:</strong><br>
-          The Palms Shopping Mall,<br>
-          1, Bisway Street, Oniru, <p>Victoria Island, </p> Lagos, Nigeria.</p>
-          <p><strong>Telephone:</strong><br>
-           +234 1330 1700</p>
-        </div>
+                <p><strong>Head Office:</strong><br>
+                    The Palms Shopping Mall,<br>
+                    1, Bisway Street, Oniru,
+                <p>Victoria Island, </p> Lagos, Nigeria.</p>
+                <p><strong>Telephone:</strong><br>
+                    +234 905 3591 751</p>
+            </div>
 
 
-        <div>
-           
+            <div>
+
+            </div>
         </div>
-    </div>
     </div>
 
 
